--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,28 @@ main {
 .fiches {
 	flex: 1;
 	margin: 8px;
+	display: grid;
+	grid-template-columns: (3, 1fr);
+	gap: 4px;
 }
-.fiches img {
-	max-width: 200px;
+
+.fiches article {
+	border: 1px solid black;
+	padding: 4px;
 }
-.fiches p {
+
+.fiches article img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 200px;;
+}
+
+.fiches article p {
 	margin-top: 4px;
 	margin-bottom: 4px;
+}
+
+.fiches article h2 {
+	text-align: center;
 }
